iss#191 Processing: Video Music: organizing file naming if all tracks with same artist, avoid artist name in file name: video track parser and tests